News
====

.. contents::

1.7.1
-----

* Normalize and make absolute the paths passed to
  :class:`paste.urlparser.StaticURLParser` (before passing a
  relative-to-cwd path to that class would cause Forbidden errors).

* Deprecate :func:`paste.fixture.setup_module`

1.7
---

* Fixed bug in :class:`paste.fixture.TestApp` that would submit forms
  with unnamed fields (like an unnamed submit button).  Also made
  checkboxes with no explicit ``value`` send ``on`` instead of
  ``checked`` (which is what browsers do).

* Fixed bug in :mod:`paste.httpserver` where
  ``environ['wsgi.input'].readline(max_size)`` ignored the max_size
  argument, which can lead to large memory usage (from Jakub Stolarski)

* Make :mod:`paste.cascade` notice sockets that have stopped producing
  data.  From Casey Zednick.

* In :class:`paste.fixture.TestApp` Accept MultiDict values for the
  ``params`` argument in requests.  (Anything with a ``.items()``
  method will have its items encoded as the request parameters.)

* Fix :mod:`paste.httpserver` to allow binding to port 0.

* In :mod:`paste.auth.auth_tkt`, set the same cookies (with the same
  domains) in ``set_cookie`` as get unset in ``logout_user_cookie``.

* In :mod:`paste.translogger` save REQUEST_METHOD in case it gets
  overridden somewhere (e.g., when using errordocuments POST would
  show up as GET).

* Exceptions with unicode messages don't cause the collector to fail.

* Sometimes :class:`paste.exceptions.errormiddleware.ErrorMiddleware`
  would not call start_response properly; this is fixed (from Andreas
  Kloecker).

* :mod:`paste.fixture.TestApp` can store multiple cookie values
  (previously only one cookie was stored; from Andrey Lebedev)

* ``u'' in TestApp(app).get('/')`` will work when the body isn't ASCII
  (before it would give a unicode error).  This problem wasn't present
  in the recommended `WebTest <http://pythonpaste.org/webtest/>`_.

* :mod:`paste.debug.profile` won't break when content is served with no